# 4ogs-telemetry

./: README.md  deploy.sh  install_orin_service.sh  pyproject.toml  setup_orin.sh
firmware/metro-telemetry/: README.md  platformio.ini
firmware/metro-telemetry/src/: main.cpp
src/telemetry/: race_overlay.py
src/telemetry/web/: index.html  overlay.css  overlay.js
systemd/: race-overlay.service
