[project]
name = "4ogs-telemetry"
version = "0.1.0"
description = "DIY race telemetry overlay for 24 Hours of Lemons"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telemetry"]

[project.scripts]
race-overlay = "telemetry.race_overlay:main"
